# ChangeLog for dev-java/plexus-mail-sender
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Oct 2007; kiorky <kiorky@cryptelium.net> +metadata.xml:
  added as a maven dependency. see #196575

  21 Oct 2007; kiorky <kiorky@cryptelium.net>
  +plexus-mail-sender-1.4_pre20070618.ebuild, +metadata.xml:
  --help
