@@ -1,4 +1,4 @@
 DIST plexus-mail-sender-1.4_pre20070618.tar.bz2 34309 RMD160 d9ed98ddca5771e179139cacf46e433288d18690 SHA1 ad01e1a062c0182ac25744a266e6ed2251d28912 SHA256 a66e0401ad465383d6a93ba44a38c0dca0565eef400700efe57bed31a391a8cc
-EBUILD plexus-mail-sender-1.4_pre20070618.ebuild 1016 RMD160 a93b31fe5d1f664eaca7b880ed6955a7f3f85023 SHA1 84b72a6648e355a2e42723ddff2ff4d7c367de01 SHA256 af707912530dc7c3de3c883729627c98ca5e0fd727a5163292a4e3fb24317d5c
-MISC ChangeLog 350 RMD160 418f928b1a51531adef01cabc3939bedb418ab39 SHA1 32edcb5e387dd93130f02eaf593af9b4a5d00db3 SHA256 113b69e9da9dfa54e44a20c4c5c23d26d39fed491d2cecc857e791fe94da164e
+EBUILD plexus-mail-sender-1.4_pre20070618.ebuild 1118 RMD160 b8c2ed49d704e5097458c37160cac80489d9a2ef SHA1 212172b9353ab96c3a6a5ddca9233acf2d1d0ebf SHA256 aef03a56acf183b2abdb2347f0151baeef4f8b78bc432e80b811bb87fe0f3588
+MISC ChangeLog 456 RMD160 e16fd4bd28be14fff723a374d507d8b0ca8dd0ea SHA1 490f3c1ecf2715e141ca848177b8ab22c78586fb SHA256 432db93601136e17ec784b5d1be2b32bfb596a06123bb7331cb6b65a63b41051
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
