@@ -14,18 +14,18 @@ KEYWORDS="~x86"
 IUSE="source doc"
 COMMON_DEPS="
 dev-java/sun-javamail
-dev-java/plexus-utils
-dev-java/plexus-container-default
-dev-java/plexus-component-api
+>=dev-java/plexus-utils-1.4.7_pre20071021
+>=dev-java/plexus-container-default-1.0_alpha33_pre20071021
+>=dev-java/plexus-component-api-1.0_alpha33_pre20071021
 "
 DEPEND=">=virtual/jdk-1.4 	${COMMON_DEPS}"
 RDEPEND=">=virtual/jre-1.4	${COMMON_DEPS}"
 EANT_EXTRA_FLAGS="-Dproject.name=${PN}"
 JAVA_MAVEN_CLASSPATH="
 sun-javamail
-plexus-utils
-plexus-container-default
-plexus-component-api
+plexus-utils-1.4.7
+plexus-container-default-1.0_alpha33
+plexus-component-api-1.0_alpha33
 "
 JAVA_MAVEN_PROJECTS="
 plexus-mail-sender-api
